src/test/ui/did_you_mean/bad-assoc-expr.stderr
error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:13:5
   |
LL |     [i32; 4]::clone(&a);
   |     ^^^^^^^^^^^^^^^ help: try: `<[i32; 4]>::clone`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:16:5
   |
LL |     [i32]::as_ref(&a);
   |     ^^^^^^^^^^^^^ help: try: `<[i32]>::as_ref`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:19:5
   |
LL |     (u8)::clone(&0);
   |     ^^^^^^^^^^^ help: try: `<(u8)>::clone`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:22:5
   |
LL |     (u8, u8)::clone(&(0, 0));
   |     ^^^^^^^^^^^^^^^ help: try: `<(u8, u8)>::clone`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:25:6
   |
LL |     &(u8)::clone(&0);
   |      ^^^^^^^^^^^ help: try: `<(u8)>::clone`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-expr.rs:28:10
   |
LL |     10 + (u8)::clone(&0);
   |          ^^^^^^^^^^^ help: try: `<(u8)>::clone`

error: aborting due to 6 previous errors

